# MPSQLite

./: README.md  config.toml  pyproject.toml
client/: main.py
models/: config.py
server/: __main__.py  database.py  manager.py  server.py
